# GPU_CUDA_Homework

./: CMakeLists.txt
result/02/: Const_Share_.xlsx
result/03/: 对比.xlsx
result/03/nvvp/: NoStream.nvvp  TwoStreamDepthNew.nvvp  TwoStreamWidth.nvvp  TwoStreamWidthNew.nvvp
result/03/old/nvvp/: SimpleStream.nvvp  TwoStreamDepth.nvvp
result/04/: 证明及计算.docx
result/10/: 图片.pptx
result/10/nvvp/: GPU03.nvvp
src/: CMakeLists.txt  complexNumberGPU.cuh  drawJuliaSetGPU.cu  drawJuliaSetGPU.cuh  drawJuliaSetGPUTest.cpp  drawJuliaSetGPUTest.cu  rayRraceSimpleGPUTest.cpp
src/00_CUDA_Test/: CUDA_TEST.cpp
src/01_drawJuliaSet/: complexNumber.cpp  complexNumber.h  drawJuliaSet.cpp  drawJuliaSet.cu  drawJuliaSet.cuh  drawJuliaSet.h
src/01_drawJuliaSetGPU/: drawJuliaSetGPU.cuh
src/01_drawJuliaSetGPU_Test/: drawJuliaSetGPUTest.cu
src/01_drawJuliaSet_Test/: drawJuliaSetGPUTest.cu  drawJuliaSetTest.cpp
src/02_rayRraceSimpleGPU/: heat.cu  heat_2d.cu  ray.cu  ray_const.cu  ray_dynamic.cu  ray_noconst.cu  ray_share.cu
src/02_rayRraceSimpleGPU_Test/: rayRraceSimpleGPUTest.cpp
src/03_GPUStream_Test/: GPUStreamTest.cpp
src/03_GPUstream/: vectorAdd.cu
src/10_heatSourceCPU/: collid.cpp  obj-viewer.cpp
src/10_heatSourceGPU/: heatSource.cu
src/10_heatSourceGPU_Test/: heatSourceGPUTest.cpp
